# io

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  cliff.toml  io.service  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  release-notes-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  release.yml
docs/: astro.config.mjs  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/architecture/: knowledge.md  orchestrator.md  overview.md  squads.md  wiki.md
docs/guide/: auto-update.md  chat.md  configuration.md  getting-started.md  mcp.md  scheduler.md  skills.md  telegram.md  troubleshooting.md  web-dashboard.md  web-frontend.md  what-is-io.md  wiki.md
docs/reference/: api.md  architecture.md  cli.md  config.md  tools.md  websocket.md
docs/squads/: execution.md  (+4 more)
scripts/: build-daemon.js  fetch-releases.ts
src/: bridge.rs  config.rs  config.ts  copilot.rs  cost.rs  daemon.ts  db.rs  event_bus.rs  fallback.rs  index.ts  instance-watchdog.test.ts  instance-watchdog.ts  knowledge_sharing.rs  logging.ts  main.rs  memory.rs  notify.test.ts  notify.ts  paths.ts  releases.json  routing.rs  session_pool.rs  setup.ts  shutdown.rs  update.ts  updater.rs  watchdog.test.ts  watchdog.ts
web/: .prettierrc.json  biome.json  css-noop-loader.mjs  css-noop-register.mjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+213 files in other folders)
