[package]
name = "io"
version = "0.1.10"
edition = "2021"
authors = ["Michael Jolley"]
description = "A personal AI assistant daemon powered by GitHub Copilot SDK with dynamic multi-agent squad architecture"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

# Self-update dependencies
sha2 = "0.10"
semver = "1"
flate2 = "1"
tar = "0.4"
zip = "2"

# Feature-gated dependencies
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
teloxide = { version = "0.13", features = ["macros"], optional = true }

[features]
default = ["tui", "telegram"]
tui = ["dep:ratatui", "dep:crossterm"]
telegram = ["dep:teloxide"]
web = []  # Future: axum web frontend
